--- a/FIASUpdate/FormMain.resx
+++ b/FIASUpdate/FormMain.resx
@@ -1347,6 +1347,9 @@
         3tuAsSU8eMBPPNlhOoIMhC8/4HeYEmNWuSf+zTrWWP+9arVfAxIT8yPjKXkAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>133, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAqYQEAZgAAAICAAAABACAAKAgBAJBhAQBAQAAAAQAgAChCAAC4aQIAMDAAAAEA
