--- a/FIASUpdate/icons8.resx
+++ b/FIASUpdate/icons8.resx
@@ -130,6 +130,9 @@
   <data name="Info16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\icons8\info16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Internet16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\icons8\internet16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Minus16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\icons8\minus16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -153,6 +156,9 @@
   </data>
   <data name="Search16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\icons8\search16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Settings16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\icons8\settings16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TableProperties16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\icons8\tableproperties16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
